--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 <body>
-    <img class="logo" src="./images/idn-logo.png" alt="idn-logo">
+    <img class="logo" src="./images/sora.png" alt="idn-logo">
      <h1>Belajar Devops</h1>
 </body>
 </html>
