--- a/apps/public/index.html
+++ b/apps/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Training DevOps IDN ~~~</title>
+    <title>Training DevOps IDN</title>
     <link rel="stylesheet" href="stylesheet/style.css">
 </head>
 <body>
     <img class="logo" src="./images/sora.png" alt="idn-logo">
-     <h1>Belajar Devops</h1>
+     <h1>Belajar Devops IDN ~~~~  </h1>
 </body>
 </html>
